multitool/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multitool
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: multitool
      port:
        number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: multitool
spec:
  selector:
    app: multitool
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
